--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <td>
                         <h1 style="display:inline">Ashok Urlana</h1> 
                         <!-- <h4 style="display:inline">赵铮</h4> -->
-                        <p style="width:720px">Currently, I am working as a Researcher at TCS research. Earlier, I did my Masters in NLP at International Institute of Information Technology-Hyderabad, under the supervision of <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravarthi Jada</a>
+                        <p style="width:720px">I am a PhD candidate at IIIT-Hyderabad, working under the guidance of <a href="https://www.iiit.ac.in/faculty/ponnurangam-kumaraguru/" target="_blank">Ponnurangam Kumaraguru (PK)</a> and <a href="https://www.iiit.ac.in/faculty/rahul-mishra/" target="_blank">Rahul Mishra</a>. My research focuses on the areas of explainability and interoperability. I am working as a Researcher at TCS research. Earlier, I did my Masters in NLP at International Institute of Information Technology-Hyderabad, under the supervision of <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravarthi Jada</a>
         
                         <p style="width:720px">My research interests are<b> explainability and interpretability </b>of LLMs. I am also interested in <b>multimodal, multilingual text summarization for low-resource languages </b> and <b>bio-inspired algorithms </b> and its related topics. 
                         </p>
