--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <h2>Experience</h2>
         <table cellspacing="0">
             <tbody>
+                
+                <tr>
+                    <td>IIIT-Hyderabad &nbsp;</td>
+                    <td>January 2025 - present &nbsp;</td>
+                    <td>PhD Fellow</td>
+                </tr>
                 <tr>
                     <td>TCS Research &nbsp;</td>
                     <td>August 2023 - present &nbsp;</td>
