--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
         <h4>Publications</h4>
         <!-- *indicates equal contribution. -->
         <ul>
+            <li>
+                <b>Agent Ideate: A Framework for Product Idea Generation from Patents Using Agentic AI</b><br>
+                Gopichand Kanumolu, <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati<br>
+                <i>In proceedings of </i>AgentScen Workshop, IJCAI 2025  <br>
+                [<a href="https://arxiv.org/pdf/2507.01717" target="_blank">PDF</a>] <br>
+                <br>
+            </li>
             
             <li>
                 <b>No Size Fits All: The Perils and Pitfalls of Leveraging LLMs Vary with Company Size</b><br>
