--- a/index.html
+++ b/index.html
@@ -104,13 +104,6 @@
         
         <h4>Preprints</h4>
         <ul>
-            <li>
-                <b>No LLM is Free From Bias: A Comprehensive Study of Bias Evaluation in Large Language Models </b><br>
-                Charaka Vinayak Kumar, <u>Ashok Urlana</u>, Gopichand Kanumolu, Bala Mallikarjunarao Garlapati, Pruthwik Mishra <br>
-                <i>In arXiv </i>, preprint 2025 <br>
-                [<a href="https://arxiv.org/pdf/2503.11985" target="_blank">PDF</a>] [<a href="https://github.com/Pruthwik/bias_eval" target="_blank">Code/Data</a>]<br>
-                <br>
-            </li>
              <li>
                 <b>HalluCounter: Reference-free LLM Hallucination Detection in the Wild!</b><br>
                 <u>Ashok Urlana</u>, Gopichand Kanumolu, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati, Rahul Mishra <br>
@@ -130,6 +123,14 @@
         <h4>Publications</h4>
         <!-- *indicates equal contribution. -->
         <ul>
+            
+            <li>
+                <b>No LLM is Free From Bias: A Comprehensive Study of Bias Evaluation in Large Language Models </b><br>
+                Charaka Vinayak Kumar, <u>Ashok Urlana</u>, Gopichand Kanumolu, Bala Mallikarjunarao Garlapati, Pruthwik Mishra <br>
+                <i>In proceedings of </i> BIAS Workshop, ECML-PKDD 2025  <br>
+                [<a href="https://arxiv.org/pdf/2503.11985" target="_blank">PDF</a>] [<a href="https://github.com/Pruthwik/bias_eval" target="_blank">Code/Data</a>]<br>
+                <br>
+            </li>
             <li>
                 <b>Agent Ideate: A Framework for Product Idea Generation from Patents Using Agentic AI</b><br>
                 Gopichand Kanumolu, <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati<br>
