--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <b>No LLM is Free From Bias: A Comprehensive Study of Bias Evaluation in Large Language Models </b><br>
                 Charaka Vinayak Kumar, <u>Ashok Urlana</u>, Gopichand Kanumolu, Bala Mallikarjunarao Garlapati, Pruthwik Mishra <br>
                 <i>In proceedings of </i> BIAS Workshop, ECML-PKDD 2025  <br>
-                [<a href="https://arxiv.org/pdf/2503.11985" target="_blank">PDF</a>] [<a href="https://github.com/Pruthwik/bias_eval" target="_blank">Code/Data</a>]<br>
+                [<a href="https://arxiv.org/pdf/2503.11985" target="_blank">PDF</a>] [<a href="https://github.com/Pruthwik/bias_eval" target="_blank">Code/Data</a>][<a href="https://llms-bias.github.io/bias/" target="_blank">Blog</a>]<br>
                 <br>
             </li>
             <li>
