--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
         
         <h4>Preprints</h4>
         <ul>
+            <li>
+                <b>AGIC: Attention-Guided Image Captioning to Improve Caption Relevance</b><br>
+                L D M S Sai Teja, <u>Ashok Urlana</u>, Pruthwik Mishra <br>
+                <i>In arXiv </i>, preprint 2025 <br>
+                [<a href="https://arxiv.org/pdf/2508.06853" target="_blank">PDF</a>] [<a href="https://github.com/saitejalekkala33/AGIC-code" target="_blank">Code/Data</a>][<a href="https://image-caption-relevance.github.io/AGIC/" target="_blank">Blog</a>]<br>
+                <br>
+            </li>
              <li>
                 <b>HalluCounter: Reference-free LLM Hallucination Detection in the Wild!</b><br>
                 <u>Ashok Urlana</u>, Gopichand Kanumolu, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati, Rahul Mishra <br>
