--- a/index.html
+++ b/index.html
@@ -111,13 +111,6 @@
                 [<a href="https://arxiv.org/pdf/2508.06853" target="_blank">PDF</a>] [<a href="https://github.com/saitejalekkala33/AGIC-code" target="_blank">Code/Data</a>][<a href="https://image-caption-relevance.github.io/AGIC/" target="_blank">Blog</a>]<br>
                 <br>
             </li>
-             <li>
-                <b>HalluCounter: Reference-free LLM Hallucination Detection in the Wild!</b><br>
-                <u>Ashok Urlana</u>, Gopichand Kanumolu, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati, Rahul Mishra <br>
-                <i>In arXiv </i>, preprint 2025 <br>
-                [<a href="https://arxiv.org/pdf/2503.04615" target="_blank">PDF</a>] [<a href="https://github.com/rahulOm9/HalluCounter" target="_blank">Code/Data</a>]<br>
-                <br>
-            </li>
             <li>
                 <b>LLMs with Industrial Lens: Deciphering the Challenges and Prospects -- A Survey</b><br>
                 <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Ajeet Kumar Singh, Bala Mallikarjunarao Garlapati, Srinivasa Rao Chalamala, Rahul Mishra <br>
@@ -130,7 +123,13 @@
         <h4>Publications</h4>
         <!-- *indicates equal contribution. -->
         <ul>
-            
+            <li>
+                <b>HalluCounter: Reference-free LLM Hallucination Detection in the Wild!</b><br>
+                <u>Ashok Urlana</u>, Gopichand Kanumolu, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati, Rahul Mishra <br>
+                <i>In proceedings of </i> Findings of IJCNLP-AACL 2025 <br>
+                [<a href="https://arxiv.org/pdf/2503.04615" target="_blank">PDF</a>] [<a href="https://github.com/rahulOm9/HalluCounter" target="_blank">Code/Data</a>]<br>
+                <br>
+            </li>
             <li>
                 <b>No LLM is Free From Bias: A Comprehensive Study of Bias Evaluation in Large Language Models </b><br>
                 Charaka Vinayak Kumar, <u>Ashok Urlana</u>, Gopichand Kanumolu, Bala Mallikarjunarao Garlapati, Pruthwik Mishra <br>
